--- a/WK1-Pandas-Basics.ipynb
+++ b/WK1-Pandas-Basics.ipynb
@@ -777,7 +777,9 @@
    "source": [
     "employees_work_exp = pd.Series([\n",
     "    'Amy White'\n",
-    "])"
+    "])\n",
+    "\n",
+    "# comment"
    ]
   }
  ],
