--- a/WK6 DATA CLEANING/Exercise/WK6-Data-Cleaning-Exercise.ipynb
+++ b/WK6 DATA CLEANING/Exercise/WK6-Data-Cleaning-Exercise.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: **Gyro A. Madrona** <br>\n",
+    "Name: **Aleja A. Villegas** <br>\n",
     "Course: **CPE2A**"
    ]
   },
