--- a/ENDTERM EDA/Data Visualization/spotifydata_visualization.ipynb
+++ b/ENDTERM EDA/Data Visualization/spotifydata_visualization.ipynb
@@ -1034,7 +1034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tempo vs Markdown"
+    "## Tempo vs Valence"
    ]
   },
   {
